--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.69.0",
+    "@aws-cdk/aws-ecs": "^1.69.0",
+    "@aws-cdk/aws-iam": "^1.69.0",
+    "@aws-cdk/aws-ssm": "^1.69.0",
     "@aws-cdk/core": "1.66.0",
     "source-map-support": "^0.5.16"
   }
